--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/gsuttie">View on GitHub</a>
 
-          <h1 id="project_title">Gsuttie.github.com</h1>
+          <h1 id="project_title">RavenDB Cheat Sheet</h1>
           <h2 id="project_tagline">Repo for RavenDB Cheat Sheet</h2>
 
         </header>
