--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
       <section id="main_content" class="inner">
         <h3>Welcome to the RavenDB Cheat Sheet.</h3>
 
-<p>This is a test</p>
+<p>This is a cheat sheet for RavenDB - how to query raven from the url/querystring without using the RavenDB Management Studio.
+
+The following are some tips for how to query your ravendb from the querystring in your browser, its easier if you use Chrome with the JSonView addon for Chrome, this way you can view the nicely formatted JSon content within your documents.</p>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
