--- a/index.html
+++ b/index.html
@@ -33,6 +33,20 @@
 
 The following are some tips for how to query your ravendb from the querystring in your browser, its easier if you use Chrome with the JSonView addon for Chrome, this way you can view the nicely formatted JSon content within your documents.</p>
 
+<ul>
+   <li>View documents by most recent changes:- http://localhost:8080/docs</li>
+   <li>List of Indexes:- http://localhost:8080/indexes</li>
+   <li>Specific Index:- http://localhost:8080/ http://localhost:8080/AlbumsCountSold (show me the contents of the Index)</li>
+  <li>Specific Index Query:- http://localhost:8080/AlbumsCountSold?query=CountSold:3 (run a query with params)</li>
+</ul>
+
+<b>Querying against Tenants</b>
+<ul>
+<li>View the contents of a particular document in one of your tenant databases:- </li>
+</ul>
+
+
+
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
