--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@ The following are some tips for how to query your ravendb from the querystring i
 <ul>
    <li>View documents by most recent changes:- http://localhost:8080/docs</li>
    <li>List of Indexes:- http://localhost:8080/indexes</li>
-   <li>Specific Index:- http://localhost:8080/ http://localhost:8080/AlbumsCountSold (show me the contents of the Index)</li>
-  <li>Specific Index Query:- http://localhost:8080/AlbumsCountSold?query=CountSold:3 (run a query with params)</li>
+   <li>Specific Index:- http://localhost:8080/AlbumsCountSold (show me the contents of the Index)</li>
+   <li>Specific Index Query:- http://localhost:8080/AlbumsCountSold?query=CountSold:3 (run a query with params)</li>
 </ul>
 
-<b>Querying against Tenants</b>
+<h4>Querying against Tenants</h4>
 <ul>
 <li>View the contents of a particular document in one of your tenant databases:- </li>
 </ul>
